--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -49,19 +49,21 @@
             android:text="Buscar"/>
 
         <Button
+            android:id="@+id/btnRestaurantesCercanos"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
             android:layout_weight="1"
-            android:text="Mi posicion"/>
+            android:text="Restaurantes \n Cercanos"/>
 
 
-        <Button
+       <!-- <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
             android:layout_weight="1"
             android:text="Cercano"/>
+            -->
     </LinearLayout>
 
 </LinearLayout>
