--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -57,13 +57,14 @@
             android:text="Restaurantes \n Cercanos"/>
 
 
-       <!-- <Button
+       <Button
+           android:id="@+id/btnCercanoClave"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
             android:layout_weight="1"
-            android:text="Cercano"/>
-            -->
+            android:text="Cercano X"/>
+
     </LinearLayout>
 
 </LinearLayout>
